Week06/Ex3.3.ATG
/* Coco/R lexer and parser specification for arithmetic expressions. */
/* 2006-09-14 */

/* Build with:
 *   Coco.exe -namespace Expressions Ex2.ATG
 */

using System.Collections.Generic;

COMPILER Expressions
  public int res;

/*--------------------------------------------------------------------------*/
CHARACTERS
  letter = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz".
  digit = "0123456789".
  cr  = '\r'.
  lf  = '\n'.
  tab = '\t'.

TOKENS
  ident  = letter {letter | digit}.
  number = digit {digit}.

IGNORE cr + lf + tab

PRODUCTIONS

/*------------------------------------------------------------------------*/
Expr<out int n>   (. int n1, n2; .)
= TermF<out n1>  (. n = n1; .)
{
  "|" TermF<out n2> (. n = (n1 == 1 || n2 == 1) ? 1 : 0; .)
  |
  TermF<out n2> (. n = n2; .)
}
.

TermF<out int n> (. int n1, n2; .)
= TermG<out n1> (. n = n1; .)
{
  "&" TermG<out n2> (. n = (n1 == 1 && n2 == 1) ? 1 : 0; .)
}
.

TermG<out int n> (. int n1, n2; .)
= TermH<out n1>  (. n = n1; .)
(
  "==" TermH<out n2> (. n = (n1 == n2) ? 1 : 0; .)
  |
  '<' TermH<out n2> (. n = (n1 < n2) ? 1 : 0; .)
  |
  '>' TermH<out n2> (. n = (n1 > n2) ? 1 : 0; .)
  |
)
.

TermH<out int n> (. int n1, n2; .)
= TermI<out n1> (. n = n1; .)
{
  '+' TermI<out n2>  (. n = n+n2; .)  
  | 
  '-' TermI<out n2>  (. n = n-n2; .)    
}
.

TermI<out int n> 
= number          (. n = Convert.ToInt32(t.val); .)
{
  '*' number  (. n = n*Convert.ToInt32(t.val); .) 
}
.

Expressions                        (. int n; .)
= Expr<out n>                (. res = n; .)
.

END Expressions.
